--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -15,7 +15,13 @@ acceptor.upgrade-legacy=Also accepts to upgrade HTTP request from legacy (Hornet
 address-setting.add=Operation adding an address-setting
 address-setting.address-full-policy=Determines what happens when an address where max-size-bytes is specified becomes full. (PAGE, DROP or BLOCK)
 address-setting.auto-create-jms-queues=Determines whether ActiveMQ should automatically create a JMS queue corresponding to the address-settings match when a JMS producer or a consumer is tries to use such a queue.
-address-setting.auto-delete-jms-queues=Determises Whether ActiveMQ should automatically delete auto-created JMS queues when they have no consumers and no messages.
+address-setting.auto-create-jms-queues.deprecated=This attribute is no longer supported by ActiveMQ.
+address-setting.auto-delete-jms-queues=Determines Whether ActiveMQ should automatically delete auto-created JMS queues when they have no consumers and no messages.
+address-setting.auto-delete-jms-queues.deprecated=This attribute is no longer supported by ActiveMQ.
+address-setting.auto-create-addresses=Determines whether ActiveMQ should automatically create an addresses corresponding to the address-settings match when a producer or a consumer is tries to use such a queue.
+address-setting.auto-delete-addresses=Determines Whether ActiveMQ should automatically delete auto-created addresses when they have no consumers and no messages.
+address-setting.auto-create-queues=Determines whether ActiveMQ should automatically create a queue corresponding to the address-settings match when a producer or a consumer is tries to use such a queue.
+address-setting.auto-delete-queues=Determines Whether ActiveMQ should automatically delete auto-created queues when they have no consumers and no messages.
 address-setting.dead-letter-address=The dead letter address
 address-setting.expiry-address=Defines where to send a message that has expired.
 address-setting.expiry-delay=Defines the expiration time that will be used for messages using the default expiration time
@@ -338,6 +344,7 @@ server.get-session-creation-time=Gets the session's creation time.
 server.id-cache-size=The size of the cache for pre-creating message IDs.
 server.import-journal=Import an XML file to the journal
 server.import-journal.file=The XML file to import in the journal
+server.import-journal.legacy-prefixes=Do not remove prefixes from legacy (Artemis 1.x) imports
 server.incoming-interceptors=The list of incoming interceptor classes used by this server.
 server.incoming-interceptors.name=The name of the interceptor class.
 server.incoming-interceptors.module=The name of the module that provides the interceptor class.
@@ -345,13 +352,14 @@ server.jmx-domain=The JMX domain used to register internal ActiveMQ MBeans in th
 server.jmx-management-enabled=Whether ActiveMQ should expose its internal management API via JMX. This is not recommended, as accessing these MBeans can lead to inconsistent configuration.
 server.journal-bindings-table=Name of the JDBC table to store the bindings.
 server.journal-jms-bindings-table=Name of the JDBC table to store the JMS bindings.
+server.journal-jms-bindings-table.deprecated=Artemis 2 no longer stores JMS bindings in its journal.
 server.journal-buffer-size=The size of the internal buffer on the journal.
 server.journal-buffer-timeout=The timeout (in nanoseconds) used to flush internal buffers on the journal.
 server.journal-compact-min-files=The minimal number of journal data files before we can start compacting.
 server.journal-compact-percentage=The percentage of live data on which we consider compacting the journal.
 server.journal-datasource=Name of the DataSource for the JDBC store.
 server.journal-database=Type of the database (can be used to customize SQL statements). If this attribute is not specified, the type of the database will be determined based on the DataSource metadata.
-server.journal-file-size=The size (in bytes) of each journal file.
+server.journal-file-size=The size (in bytes) of each journal file
 server.journal-jdbc-network-timeout=The timeout used by the JDBC connection to detect network issues.
 server.journal-large-messages-table=Name of the JDBC table to store the large messages.
 server.journal-max-io=The maximum number of write requests that can be in the AIO queue at any one time.
@@ -420,6 +428,7 @@ server.outgoing-interceptors.name=The name of the interceptor class.
 server.outgoing-interceptors.module=The name of the module that provides the interceptor class.
 server.page-max-concurrent-io=The maximum number of concurrent reads allowed on paging
 server.perf-blast-pages=Number of pages to add to check the journal performance (only meant to be used to test performance of pages).
+server.perf-blast-pages.deprecated=Artemis 2 no longer supports this attribute.
 server.persist-delivery-count-before-delivery=Whether the delivery count is persisted before delivery. False means that this only happens after a message has been cancelled.
 server.persist-id-cache=Whether IDs are persisted to the journal.
 server.persistence-enabled=Whether the server will use the file based journal for persistence.
@@ -429,7 +438,13 @@ server.reset-all-message-counter-histories=Resets all message counters history.
 server.reset-all-message-counters=Resets all message counters.
 server.resolve-address-setting.address-full-policy=Determines what happens when an address where max-size-bytes is specified becomes full. (PAGE, DROP or BLOCK)
 server.resolve-address-setting.auto-create-jms-queues=Determines whether ActiveMQ should automatically create a JMS queue corresponding to the address-settings match when a JMS producer or a consumer is tries to use such a queue.
-server.resolve-address-setting.auto-delete-jms-queues=Determises Whether ActiveMQ should automatically delete auto-created JMS queues when they have no consumers and no messages.
+server.resolve-address-setting.auto-create-jms-queues.deprecated=This attribute is no longer supported by ActiveMQ.
+server.resolve-address-setting.auto-delete-jms-queues=Determines Whether ActiveMQ should automatically delete auto-created JMS queues when they have no consumers and no messages.
+server.resolve-address-setting.auto-delete-jms-queues.deprecated=This attribute is no longer supported by ActiveMQ.
+server.resolve-address-setting.auto-create-addresses=Determines whether ActiveMQ should automatically create an addresses corresponding to the address-settings match when a producer or a consumer is tries to use such a queue.
+server.resolve-address-setting.auto-delete-addresses=Determines Whether ActiveMQ should automatically delete auto-created addresses when they have no consumers and no messages.
+server.resolve-address-setting.auto-create-queues=Determines whether ActiveMQ should automatically create a queue corresponding to the address-settings match when a producer or a consumer is tries to use such a queue.
+server.resolve-address-setting.auto-delete-queues=Determines Whether ActiveMQ should automatically delete auto-created queues when they have no consumers and no messages.
 server.resolve-address-setting.activemq-address=The address to resolve.
 server.resolve-address-setting.dead-letter-address=The dead letter address
 server.resolve-address-setting.expiry-address=Defines where to send a message that has expired.
@@ -453,6 +468,7 @@ server.rollback-prepared-transaction.reply=True if the transaction was successfu
 server.rollback-prepared-transaction.transaction-as-base-64=The Base64 representation of a transaction XID.
 server.rollback-prepared-transaction=Heuristically rolls back a prepared transaction.
 server.run-sync-speed-test=Whether on startup to perform a diagnostic test on how fast your disk can sync. Useful when determining performance issues.
+server.run-sync-speed-test.deprecated=Artemis 2 no longer supports this attribute.
 server.scheduled-thread-pool-max-size=The number of threads that the main scheduled thread pool has.
 server.elytron-domain=The name of the Elytron security domain used to verify user and role information.
 server.security-domain=The security domain to use to verify user and role information.
