--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -338,6 +338,7 @@ server.get-session-creation-time=Gets the session's creation time.
 server.id-cache-size=The size of the cache for pre-creating message IDs.
 server.import-journal=Import an XML file to the journal
 server.import-journal.file=The XML file to import in the journal
+server.import-journal.legacy-prefixes=Do not remove prefixes from legacy (Artemis 1.x) imports
 server.incoming-interceptors=The list of incoming interceptor classes used by this server.
 server.incoming-interceptors.name=The name of the interceptor class.
 server.incoming-interceptors.module=The name of the module that provides the interceptor class.
@@ -345,6 +346,7 @@ server.jmx-domain=The JMX domain used to register internal ActiveMQ MBeans in th
 server.jmx-management-enabled=Whether ActiveMQ should expose its internal management API via JMX. This is not recommended, as accessing these MBeans can lead to inconsistent configuration.
 server.journal-bindings-table=Name of the JDBC table to store the bindings.
 server.journal-jms-bindings-table=Name of the JDBC table to store the JMS bindings.
+server.journal-jms-bindings-table.deprecated=Artemis 2 no longer stores JMS bindings in its journal.
 server.journal-buffer-size=The size of the internal buffer on the journal.
 server.journal-buffer-timeout=The timeout (in nanoseconds) used to flush internal buffers on the journal.
 server.journal-compact-min-files=The minimal number of journal data files before we can start compacting.
@@ -352,11 +354,14 @@ server.journal-compact-percentage=The percentage of live data on which we consid
 server.journal-datasource=Name of the DataSource for the JDBC store.
 server.journal-database=Type of the database (can be used to customize SQL statements). If this attribute is not specified, the type of the database will be determined based on the DataSource metadata.
 server.journal-file-size=The size (in bytes) of each journal file.
+server.journal-jdbc-lock-expiration=The time the HA lock is considered valid without keeping it alive.
+server.journal-jdbc-lock-renew-period=The renewal period for the HA lock to keep it alive.
 server.journal-jdbc-network-timeout=The timeout used by the JDBC connection to detect network issues.
 server.journal-large-messages-table=Name of the JDBC table to store the large messages.
 server.journal-max-io=The maximum number of write requests that can be in the AIO queue at any one time.
 server.journal-messages-table=Name of the JDBC table to store the messages.
 server.journal-min-files=How many journal files to pre-create.
+server.journal-node-manager-store-table=Name of the JDBC table to store the node manager.
 server.journal-page-store-table=Name of the JDBC table to store pages.
 server.journal-pool-files=The number of journal files that can be reused. ActiveMQ will create as many files as needed however when reclaiming files it will shrink back to the value (-1 means no limit).
 server.journal-sync-non-transactional=Whether to wait for non transaction data to be synced to the journal before returning a response to the client.
@@ -420,6 +425,7 @@ server.outgoing-interceptors.name=The name of the interceptor class.
 server.outgoing-interceptors.module=The name of the module that provides the interceptor class.
 server.page-max-concurrent-io=The maximum number of concurrent reads allowed on paging
 server.perf-blast-pages=Number of pages to add to check the journal performance (only meant to be used to test performance of pages).
+server.perf-blast-pages.deprecated=Artemis 2 no longer supports this attribute.
 server.persist-delivery-count-before-delivery=Whether the delivery count is persisted before delivery. False means that this only happens after a message has been cancelled.
 server.persist-id-cache=Whether IDs are persisted to the journal.
 server.persistence-enabled=Whether the server will use the file based journal for persistence.
@@ -453,6 +459,7 @@ server.rollback-prepared-transaction.reply=True if the transaction was successfu
 server.rollback-prepared-transaction.transaction-as-base-64=The Base64 representation of a transaction XID.
 server.rollback-prepared-transaction=Heuristically rolls back a prepared transaction.
 server.run-sync-speed-test=Whether on startup to perform a diagnostic test on how fast your disk can sync. Useful when determining performance issues.
+server.run-sync-speed-test.deprecated=Artemis 2 no longer supports this attribute.
 server.scheduled-thread-pool-max-size=The number of threads that the main scheduled thread pool has.
 server.elytron-domain=The name of the Elytron security domain used to verify user and role information.
 server.security-domain=The security domain to use to verify user and role information.
