--- a/feature-pack/pom.xml
+++ b/feature-pack/pom.xml
@@ -1688,8 +1688,13 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-cli</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-commons</artifactId>
@@ -1835,6 +1840,17 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-stomp-protocol</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-tools</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
