[WFLY-9407] Upgrade Artemis 2.6.2
* remove JMS-based management API and replace it with Core management
  API
* fix jms-queue & jms-topic :remove operations that must both use the
  JMSServerManager to create and destroy the JMS resources
* remove (unused) bindings from JMS<Queue|Topic>Service
* flag properties removed from Artemis 2 as deprecated attributes
* support legacy prefix from import-journal operation

JIRA: https://issues.jboss.org/browse/WFLY-9407

--

[WFLY-9513] Support HA in Messaging JDBC store

* add new attributes to configure HA in Messaging JDBC store:
  * journal-jdbc-lock-acquisition-timeout
  * journal-jdbc-lock-expiration
  * journal-jdbc-lock-renew-period
  * journal-node-manager-store-table
* add new SQL statements in PropertySQLProviderFactory.

JIRA: https://issues.jboss.org/browse/WFLY-9513

--

[WFLY-10165] fix jdbc-network-timeout default value

Default value of jdbc-network-timeout is 20 seconds.

JIRA: https://issues.jboss.org/browse/WFLY-10165

--

[WFLY-10207] remove journal-jdbc-lock-acquisition-timeout

JIRA: https://issues.jboss.org/browse/WFLY-10207

--- a/galleon-pack/pom.xml
+++ b/galleon-pack/pom.xml
@@ -1887,6 +1887,12 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-cli</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -1914,6 +1920,12 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-dto</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -2034,6 +2046,17 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-stomp-protocol</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-tools</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
