[WFLY-9407] Upgrade Artemis 2.5.0
Support legacy prefix from import-journal operation

JIRA: https://issues.jboss.org/browse/WFLY-9407

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -344,6 +344,7 @@ server.get-session-creation-time=Gets the session's creation time.
 server.id-cache-size=The size of the cache for pre-creating message IDs.
 server.import-journal=Import an XML file to the journal
 server.import-journal.file=The XML file to import in the journal
+server.import-journal.legacy-prefixes=Do not remove prefixes from legacy (Artemis 1.x) imports
 server.incoming-interceptors=The list of incoming interceptor classes used by this server.
 server.incoming-interceptors.name=The name of the interceptor class.
 server.incoming-interceptors.module=The name of the module that provides the interceptor class.
