--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
         <version.jsoup>1.8.3</version.jsoup>
         <version.net.jcip>1.0</version.net.jcip>
         <version.net.shibboleth.utilities.java-support>7.1.1</version.net.shibboleth.utilities.java-support>
-        <version.org.apache.activemq.artemis>2.5.0</version.org.apache.activemq.artemis>
+        <version.org.apache.activemq.artemis>2.7.0-SNAPSHOT</version.org.apache.activemq.artemis>
         <version.org.apache.avro>1.7.6</version.org.apache.avro>
         <version.org.apache.cxf>3.2.2</version.org.apache.cxf>
         <version.org.apache.cxf.xjcplugins>3.1.0</version.org.apache.cxf.xjcplugins>
@@ -577,6 +577,7 @@
                                             <exclude>trove:trove</exclude>
                                             <exclude>woodstox:wstx-lgpl</exclude>
                                             <exclude>xml-apis:xml-apis</exclude>
+                                            <exclude>org.apache.activemq:*</exclude>
                                         </excludes>
                                     </bannedDependencies>
                                     <dependencyConvergence/>
@@ -6570,7 +6571,7 @@
                 <!-- There are lots of issues with checkstyle runtime on JDK9, it somewhat works but really slows down build, disabling it for now-->
                 <checkstyle.skip>true</checkstyle.skip>
             </properties>
-            
+
         </profile>
         <profile>
             <id>docs</id>
