--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -98,6 +98,14 @@ broadcast-group.start=Starts the broadcast group.
 broadcast-group.started=Whether the broadcast group is started.
 broadcast-group.stop=Stops the broadcast group.
 broadcast-group=A broadcast group is the means by which a server broadcasts connectors over the network.
+external-jms-queue.add=Add a client JMS queue.
+external-jms-queue.entries=The jndi names the queue will be bound to.
+external-jms-queue.remove=Remove a client JMS queue.
+external-jms-queue=Defines a JMS queue to a remote broker.
+external-jms-topic.add=Add a client JMS topic..
+external-jms-topic.entries=The jndi names the topic will be bound to.
+external-jms-topic.remove=Remove a clientJMS topic.
+external-jms-topic=Defines a JMS topic to a remote broker.
 cluster-connection.add=Operation adding a cluster connection
 cluster-connection.allow-direct-connections-only=Whether, if a node learns of the existence of a node that is more than 1 hop away, we do not create a bridge for direct cluster connection. Only relevant if 'static-connectors' is defined.
 cluster-connection.call-failover-timeout=The timeout to use when fail over is in process (in ms) for remote calls made by the cluster connection.
