--- a/pom.xml
+++ b/pom.xml
@@ -5947,6 +5947,14 @@
                         <groupId>*</groupId>
                         <artifactId>*</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>io.netty</groupId>
+                        <artifactId>netty-buffer</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>io.netty</groupId>
+                        <artifactId>netty-transport</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
